--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,55 +1,50 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.win_vkey.startai.winvkey.SettingsFragment" android:layout_gravity="center_vertical">
-
-    <!-- TODO: Update blank fragment layout -->
-
-    <LinearLayout
-            android:orientation="vertical"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="10dp"
+              tools:context="com.win_vkey.startai.winvkey.SettingsFragment"
+              android:layout_gravity="center_vertical"
+              android:dividerPadding="25dp" android:showDividers="middle"
+              android:divider="@android:color/transparent">
+    <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="10dp"
-            android:dividerPadding="25dp" android:showDividers="middle"
-            android:divider="@android:color/transparent">
-        <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/input_hint_address" android:backgroundTint="@color/colorPrimary"
-                    android:id="@+id/input_host"/>
-        </android.support.design.widget.TextInputLayout>
-        <android.support.design.widget.TextInputLayout
+        <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:showDividers="none">
+                android:layout_height="match_parent"
+                android:hint="@string/input_hint_address" android:backgroundTint="@color/colorPrimary"
+                android:id="@+id/input_host"/>
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:showDividers="none">
 
-            <android.support.design.widget.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/input_hint_port" android:id="@+id/input_port"
-                    android:inputType="number|numberDecimal"/>
-        </android.support.design.widget.TextInputLayout>
-        <LinearLayout
-                android:orientation="horizontal"
+        <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" android:layout_gravity="center_vertical|center_horizontal">
-            <Button
-                    android:text="Save"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/saveConfigButton" android:layout_weight="1"
-                    android:textColor="?android:attr/colorForegroundInverse"
-                    android:backgroundTint="@color/colorPrimary" android:onClick="saveConfig"/>
-            <ImageButton
-                    android:src="@drawable/ic_error_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/helpButton" android:layout_weight="0"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:onClick="showSettingsHelp"
-                    android:tint="?attr/colorPrimary" android:layout_gravity="center_vertical|center_horizontal"/>
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:hint="@string/input_hint_port" android:id="@+id/input_port"
+                android:inputType="number|numberDecimal"/>
+    </android.support.design.widget.TextInputLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:layout_gravity="center_vertical|center_horizontal">
+        <Button
+                android:text="Save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/saveConfigButton" android:layout_weight="1"
+                android:textColor="?android:attr/colorForegroundInverse"
+                android:backgroundTint="@color/colorPrimary" android:onClick="saveConfig"/>
+        <ImageButton
+                android:src="@drawable/ic_error_black_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/helpButton" android:layout_weight="0"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:onClick="showSettingsHelp"
+                android:tint="?attr/colorPrimary" android:layout_gravity="center_vertical|center_horizontal"/>
     </LinearLayout>
-</FrameLayout>
+</LinearLayout>
