--- a/app/src/main/res/layout/dialog_modify_key.xml
+++ b/app/src/main/res/layout/dialog_modify_key.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent" tools:layout_editor_absoluteY="25dp">
-
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                  xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,10 +43,9 @@
                     android:layout_height="wrap_content" tools:layout_editor_absoluteY="78dp"
                     tools:layout_editor_absoluteX="16dp" android:id="@+id/textView3" android:layout_weight="10"/>
             <Switch
-                    android:text="add to favourite"
+                    android:text="@string/modify_key_favourite_hint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/switch_favor" android:layout_weight="0"
                     android:checked="false" tools:checked="false"/>
         </LinearLayout>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
