--- a/app/src/main/res/layout/fragment_keys.xml
+++ b/app/src/main/res/layout/fragment_keys.xml
@@ -2,7 +2,7 @@
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.win_vkey.startai.winvkey.KeysFragment" android:id="@+id/text">
+             tools:context="com.startai.winvkey.KeysFragment" android:id="@+id/text">
 
     <!-- TODO: Update blank fragment layout -->
     <!-- <ListView
@@ -13,12 +13,11 @@
 
     <android.support.design.widget.FloatingActionButton
             android:src="@drawable/ic_add_black_24dp"
-            android:layout_width="57dp"
             android:layout_height="53dp"
-            android:clickable="true"
             android:id="@+id/button_add_key" android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp" android:layout_gravity="bottom|right"
-            app:backgroundTint="@color/colorPrimary"/>
+            android:layout_gravity="bottom|right"
+            app:backgroundTint="@color/colorPrimary" android:scaleType="center" android:layout_marginBottom="20dp"
+            android:layout_width="53dp"/>
     <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/main_view" android:visibility="visible"
