--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,10 +5,9 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="10dp"
-              tools:context="com.win_vkey.startai.winvkey.SettingsFragment"
-              android:layout_gravity="center_vertical"
+              tools:context="com.startai.winvkey.SettingsFragment"
               android:dividerPadding="25dp" android:showDividers="middle"
-              android:divider="@android:color/transparent">
+              android:divider="@android:color/transparent" android:layout_gravity="top">
     <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -32,9 +31,9 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:layout_gravity="center_vertical|center_horizontal">
+            android:layout_height="wrap_content" android:layout_gravity="center_vertical|center_horizontal">
         <Button
-                android:text="Save"
+                android:text="@string/save_setting_button_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/saveConfigButton" android:layout_weight="1"
                 android:textColor="?android:attr/colorForegroundInverse"
@@ -45,6 +44,6 @@
                 android:layout_height="wrap_content" android:id="@+id/helpButton" android:layout_weight="0"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:onClick="showSettingsHelp"
-                android:tint="?attr/colorPrimary" android:layout_gravity="center_vertical|center_horizontal"/>
+                android:tint="?attr/colorPrimary" android:layout_gravity="center"/>
     </LinearLayout>
 </LinearLayout>
